--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/redux": "^3.6.0",
     "@types/redux-immutable-state-invariant": "^2.1.1",
+    "@types/reselect": "^2.2.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
@@ -23,6 +24,7 @@
     "redux": "^4.0.5",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "typescript": "^3.7.5"
   },
   "scripts": {
